--- a/assets/css/black-dashboard-react.css
+++ b/assets/css/black-dashboard-react.css
@@ -8592,7 +8592,7 @@ a.text-darker:hover, a.text-darker:focus {
   border: none;
   position: relative;
   overflow: hidden;
-  margin: 4px 1px;
+  margin-bottom: 1rem;
   border-radius: 0.4285rem;
   cursor: pointer;
   background: #344675;
@@ -11078,9 +11078,17 @@ p {
 button,
 input,
 optgroup,
-select,
+select {
+  font-family: "Poppins", sans-serif; 
+}
+
 textarea {
-  font-family: "Poppins", sans-serif; }
+  font-family: "Poppins", sans-serif; 
+  margin-bottom: 1rem;
+  background-color: black;
+  color: white;
+  width: 100%;
+}
 
 .card h1, .card h2, .card h3, .card h4, .card h5, .card h6, .card p {
   color: rgba(255, 255, 255, 0.8); 
