Update Accountupdate component

--- a/assets/css/black-dashboard-react.css
+++ b/assets/css/black-dashboard-react.css
@@ -3671,7 +3671,7 @@ input[type="button"].btn-block {
   margin-bottom: 0; }
 
 .card-text:last-child {
-  margin-bottom: 0;
+  margin-bottom: 1rem;
 }
 .card-text{
   margin-top: 0.5rem;
