--- a/assets/css/black-dashboard-react.css
+++ b/assets/css/black-dashboard-react.css
@@ -3678,24 +3678,6 @@ input[type="button"].btn-block {
   margin-top: 0.5rem;
 }
 
-.styled-card-text{
-  margin-top: 0rem;
-  background-color: transparent;
-  color: rgb(255, 255, 255, 0.8);
-  font-size: 0.75rem;
-  padding: 0.5rem 0.7rem;
-  border: 1px solid #cad1d7;
-  border-color: #2b3553;
-  border-radius: 0.4285rem;
-  line-height: 1.42857;
-}
-
-.styled-card-text:focus {
-  outline-color: var(--primary);
-  background-color: transparent;
-  box-shadow: none;
-}
-
 .card-link:hover {
   text-decoration: none; }
 
@@ -12947,9 +12929,11 @@ code {
 textarea.form-control {
   max-width: 100%;
   max-height: 80px;
-  padding: 10px 10px 0 0;
+  padding: 0.5rem 0.7rem;
   resize: none;
-  line-height: 2; }
+  line-height: 2;
+  margin-bottom: 1rem;
+}
 
 .has-success.form-group .form-control,
 .has-success.form-group.no-border .form-control,
